Changed button text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span class="quote">&quot;0.3.1&quot;</span>
     </div>
     <div class="controls">
-      <a class="btn" href="latest/api/little/sql/index.html">View Scaladoc</a>
+      <a class="btn" href="latest/api/little/sql/index.html">API Documentation</a>
       <a class="btn btn-alt" href="https://github.com/losizm/little-sql">View on GitHub</a>
     </div>
   </div>
