--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
   <div class="hero">
     <div class="brand">little<span class="sep">.</span><em>sql</em></div>
-    <div class="tagline">The Scala library that provides extension methods to <em>java.sql</em> and <em>javax.sql</em>.</div>
+    <div class="tagline">The Scala library that provides extension methods to <em>java.sql</em>.</div>
     <div class="stripe">
       libraryDependencies <span class="op">+=</span>
       <span class="quote">&quot;com.github.losizm&quot;</span>
       <span class="op">%%</span>
       <span class="quote">&quot;little-sql&quot;</span>
       <span class="op">%</span>
-      <span class="quote">&quot;0.3.1&quot;</span>
+      <span class="quote">&quot;0.4.0&quot;</span>
     </div>
     <div class="controls">
       <a class="btn" href="latest/api/little/sql/index.html">API Documentation</a>
